MOBILE-4868 overview: Fix column alignment when item not found

--- a/src/core/features/course/pages/overview/overview.scss
+++ b/src/core/features/course/pages/overview/overview.scss
@@ -31,4 +31,9 @@
         --background: var(--danger-tint);
         --color: var(--danger-shade);
     }
+
+    table.core-table {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
 }
